source/blender/imbuf/intern/util_gpu.c
@@ -223,13 +223,14 @@ static void *imb_gpu_get_data(const ImBuf *ibuf,
       return NULL;
     }
 
+    int buffer_size = do_rescale ? rescale_size[0] * rescale_size[1] : ibuf->x * ibuf->y;
     if (is_float_rect) {
-      for (uint64_t i = 0; i < ibuf->x * ibuf->y; i++) {
+      for (uint64_t i = 0; i < buffer_size; i++) {
         ((float *)data_rect)[i] = ((float *)src_rect)[i * 4];
       }
     }
     else {
-      for (uint64_t i = 0; i < ibuf->x * ibuf->y; i++) {
+      for (uint64_t i = 0; i < buffer_size; i++) {
         ((uchar *)data_rect)[i] = ((uchar *)src_rect)[i * 4];
       }
     }
